unpackaged/main/default/objects/Task_Comment__c/Task_Comment__c.object-meta.xml
<CustomObject>
    <label>Task Comment</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Task Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>