unpackaged/main/default/objects/Task_Comment__c/fields/CaseCommentId__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentId__c</fullName>
    <label>CaseCommentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>