unpackaged/main/default/objects/Task_Comment__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>Owner:User.FirstName + &#39; &#39; + Owner:User.LastName</formula>
    <label>OwnerName</label>
    <type>Text</type>
</CustomField>